# onc-causal-inference

./: .gitignore  CLAUDE.md  README.md  claude_considers_ten_confounders.txt  claude_explains_maximum_ite_feasible.txt  claude_explains_mil_transformer.txt  claude_explains_this_is_hard.txt  pyproject.toml  setup.py
cdt/: __init__.py  cli.py  config.py
cdt_causal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cdt_results_tfidf_baseline/: config.json
codex_iteration/: MANIFEST.md  README.md  TODAY_ITERATION_SUMMARY.md
example_configs/: agentic_explicit_feature_forest_config.json  bert_config.json  bert_cross_chunk_config.json  bert_pool_config.json  c1d_hybrid_config.json  causal_forest_config.json  concept_aware_metastatic_sites.json  confounder_config.json  conv_pool_config.json  dr_moce_config.json  explicit_confounders_config.json  frozen_llm_pooler_config.json  gated_mil_config.json  gru_confounder_3way_config.json  gru_confounder_config.json  gru_pool_config.json  gru_transformer_mil_config.json  hierarchical_cnn_config.json  hierarchical_gru_config.json  hierarchical_llm_config.json  hierarchical_transformer_config.json  llm_config.json  modernbert_config.json  rlearner_config.json  semantic_cnn_config.json  simple_cnn_config.json  tfidf_forest_config.json  transformer_pool_config.json
example_synthetic_data_one_confounder/: dataset.parquet  dataset_with_extraction.parquet  metadata.json
example_synthetic_data_one_confounder_continuous/: generation_config.json  metadata.json
example_synthetic_data_one_confounder_nsclc/: generation_config.json
example_synthetic_data_one_confounder_twostage/: metadata.json
example_synthetic_data_ten_confounders/: dataset.parquet  dataset_with_extraction.parquet
examples/: gru_pool_config.json  (+13 more)
(+284 files in other folders)
